--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/font-awesome.css">
   <link rel="stylesheet" href="css/style.css">
+  <link rel="icon" href="img/fav-icon.png">
 </head>
 <body>
 
@@ -170,7 +171,7 @@
 <!--           <div class="timeline-item">
             <span class="date">2013 - 2016</span>
             <h4>web developer - <span>the webshala</span></h4>
-<!--             <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p> -->
+            <p>aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p> 
           </div> -->
          </div>
        </div>
