--- a/index.html
+++ b/index.html
@@ -101,20 +101,30 @@
           enjoys engaging in innovative challenging endeavors by exerting 
           the software engineering skills, strive to effectively collaborate and 
           commit to corporate the environment with the capability of hard-working and logical.</p>
-        <h3>skills</h3>
+        <h3>Technical Skills</h3>
         <div class="skills">
-          <div class="skill-item">html</div>
-          <div class="skill-item">css</div>
-          <div class="skill-item">javascript</div>
-          <div class="skill-item">python</div>
-          <div class="skill-item">php</div>
           <div class="skill-item">java</div>
-          <div class="skill-item">AutoCAD</div>
-          <div class="skill-item">Arc-GIS</div>
-          <div class="skill-item">c</div>
-          <div class="skill-item">Surfer</div>
+          <div class="skill-item">css</div>
+          <div class="skill-item">EcmaScript</div>
+          <div class="skill-item">python</div>
+          <div class="skill-item">SQL</div>
+          <div class="skill-item">TypeScript</div>
+          <div class="skill-item">JavaEE(Servlet,JSONP,JSONB)</div>
+          <div class="skill-item">JavaSE(JDBC,IO,NIO,Loading,API)</div>
+          <div class="skill-item">Maven</div>
+          <div class="skill-item">Lambok</div>
+          <div class="skill-item">Postman</div>
+          <div class="skill-item">Tomcat</div>
+          <div class="skill-item">NPM</div>
+          <div class="skill-item">JQuery</div>
+          <div class="skill-item">Bootstrap</div>
+          <div class="skill-item">GIT</div>
+          <div class="skill-item">GITHUB</div>
+          <div class="skill-item">VS-Code</div>
+          <div class="skill-item">IntelliJ IDEA</div>
         </div>
 
+  
         <div class="about-tabs">
           <button type="button" class="tab-item active" data-target="#education">education</button>
           <button type="button" class="tab-item" data-target="#experience">experience</button>
